k3s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watterssu-backend
  namespace: portfolio
  labels:
    app: watterssu-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watterssu-backend
  template:
    metadata:
      labels:
        app: watterssu-backend
    spec:
      containers:
      - name: backend
        image: watersu916/watterssu-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        volumeMounts:
        - name: messages-storage
          mountPath: /usr/src/app/data
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
      volumes:
      - name: messages-storage
        persistentVolumeClaim:
          claimName: watterssu-backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: watterssu-backend-service
  namespace: portfolio
spec:
  selector:
    app: watterssu-backend
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
  type: ClusterIP
